# Lucky-Test-Analysetool

./: .gitignore  .local.env.example  AGENTS.md  ANFORDERUNGSANALYSE.md  Lucky Test Analysetool.spec  README.md  build_windows.cmd  build_windows.ps1  pyproject.toml  requirements.txt  windows_launcher.py
pyinstaller_hooks/: hook-tkinter.py  runtime_tkinter.py
pyinstaller_hooks/pre_find_module_path/: hook-tkinter.py
src/lucky_analyzer/: __init__.py  app.py  apple_api.py  config.py  database.py  instagram_api.py  instagram_service.py  models.py  report_parser.py  service.py  storefront_api.py  tiktok_api.py  tiktok_service.py  youtube_api.py  youtube_service.py
tests/: test_apple_api.py  test_config.py  test_database.py  test_instagram_api.py  test_models.py  test_report_parser.py  test_service.py  test_storefront_api.py  test_tiktok_api.py  test_youtube_api.py
